networking/nginx/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: nginx-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: victor-ca

spec:
  gatewayClassName: nginx

  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: nginx-demo.local
    - name: https
      protocol: HTTPS
      port: 443
      hostname: nginx-demo.local
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: nginx-demo-cert
