networking/nginx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: nginx-demo
  namespace: default

spec:
  parentRefs:
    - name: nginx-gateway

  hostnames:
    - nginx-demo.local

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: nginx-demo
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute

metadata:
  name: teleport-cluster
  namespace: teleport-cluster

spec:
  parentRefs:
    - name: nginx-gateway
      namespace: default
      sectionName: tls-teleport

  hostnames:
    - teleport.victor.local

  rules:
    - backendRefs:
        - name: teleport-cluster
          port: 443
